--- a/README.adoc
+++ b/README.adoc
@@ -4,9 +4,9 @@
 
 == Versions
 
-*DEPRECATED*:
-* 2.1.26-2.1.28: Uses old insertion mechanism
+==== DEPRECATED
+- *2.1.26*-*2.1.28*: Uses old insertion mechanism
 
-*SUPPORTED*:
-* 2.1.29-2.1.33: Did not have the gui_hooks in Models dialog
-* 2.1.34+: Current
+==== SUPPORTED
+- *2.1.29*-*2.1.33*: Did not have the gui_hooks in Models dialog
+- *2.1.34*+: Current
